# Lazarus

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: _fixes.hpp.048273C1A8CF8BA2.idx  _vectorize.hpp.B66E5F33C753AD2C.idx  camera.cpp.D12E29274119D1EE.idx  camera.h.16E3CFA1D2DD69D4.idx  common.hpp.5C197A075218CECD.idx  compute_common.hpp.F7D553786873CBC9.idx  compute_vector_relational.hpp.A27DE9B7CF90CCD9.idx  constants.hpp.D8A6BF461A53F79C.idx  constants.inl.E3B0547B6C83E229.idx  epsilon.hpp.C7B2224414578CBB.idx  epsilon.inl.D850C70BFA3D41AC.idx  exponential.hpp.2452A3992334E710.idx  func_common.inl.A2720709C63C02B2.idx  func_exponential.inl.9DB5E85EDD403612.idx  func_geometric.inl.18DE5F504D116479.idx  func_integer.inl.71F25E9461CD03FC.idx  func_matrix.inl.54D53903040C3E39.idx  func_packing.inl.55B29C7E8AA7E30C.idx  func_trigonometric.inl.E9CA36BE150C7729.idx  func_vector_relational.inl.0D503AC9F65B66D3.idx  fwd.hpp.128436A163CF862C.idx  geometric.hpp.13C7FC2BFC312880.idx  glad.c.328DD36E82AA1A40.idx  glad.c.464514141E7508EB.idx  glad.h.2E1DF826BDB44E41.idx  glfw3.h.C18ADFF13D40F801.idx  glm.hpp.B5A66CB6E8853FAA.idx  integer.hpp.A22759EC1438D381.idx  khrplatform.h.7D71AD84653377A0.idx  main.cpp.C466FC1D462C5887.idx  mat2x2.hpp.80C30F82969C1C16.idx  mat2x3.hpp.1F4D023503AE729A.idx  mat2x4.hpp.3A612C49C5E7AA99.idx  mat3x2.hpp.29FE1D8C3081F537.idx  mat3x3.hpp.6781C5A9E1A2BE49.idx  mat3x4.hpp.7D990DD7459D25BB.idx  mat4x2.hpp.CFF0B815CCE40EC7.idx  mat4x3.hpp.F9C58A4F1909AA63.idx  mat4x4.hpp.24ABBAD203D139F9.idx  matrix.hpp.76F8C8D7476589F6.idx  (+154 more)
cmake/: images_list.cmake  shaders_list.cmake  sources_list.cmake
cmake/basic/: shaders_list.cmake  sources_list.cmake
cmake/lighting/: shaders_list.cmake  sources_list.cmake
cmake/model_loading/: shaders_list.cmake  sources_list.cmake
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake
include/glad/: glad.h
lib/: glfw3.lib
shader/basic/: shader.fs  shader.vs
shader/lighting/: light_source_shader.fs  shader.fs  shader.vs
shader/model_loading/: light_source.fs  light_source.vs  shader.fs  shader.vs
src/: camera.cpp  camera.h  main.cpp  shader.cpp  shader.h
src/basic/: glad.c  main.cpp  shader.cpp
src/lighting/: camera.cpp  camera.h  main.cpp  shader.cpp  shader.h
src/model_loading/: camera.cpp  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h
